--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -432,5 +432,15 @@
       "message": "आपकी प्रतिक्रिया प्राप्त हो गई है। हम आपके योगदान की सराहना करते हैं और इसकी सावधानीपूर्वक समीक्षा करेंगे।",
       "backHome": "होम पर वापस"
     }
+  },
+  "pricing": {
+    "premium": {
+      "privacy_title": "100% ऑन-डिवाइस गोपनीयता",
+      "privacy_desc": "आपका स्वास्थ्य डेटा आपके iPhone को कभी नहीं छोड़ता। VitalsPath आपकी सुरक्षा के लिए iCloud कीचेन और एन्क्रिप्टेड स्थानीय डेटाबेस का उपयोग करता है।"
+    },
+    "free": {
+      "functional_badge": "100% कार्यात्मक",
+      "forever_badge": "हमेशा के लिए"
+    }
   }
 }
