--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -493,5 +493,15 @@
       "message": "Ваше сообщение получено.",
       "backHome": "На главную"
     }
+  },
+  "pricing": {
+    "premium": {
+      "privacy_title": "100% конфиденциальность на устройстве",
+      "privacy_desc": "Ваши данные о здоровье никогда не покидают ваш iPhone. VitalsPath использует связку ключей iCloud и зашифрованные локальные базы данных для вашей защиты."
+    },
+    "free": {
+      "functional_badge": "100% ФУНКЦИОНАЛЬНО",
+      "forever_badge": "НАВСЕГДА"
+    }
   }
 }
