--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -528,11 +528,11 @@
     "subtitle": "Des tarifs simples et transparents. Aucun frais caché.",
     "monthly": {
       "title": "Mensuel",
-      "price": "4,99 €",
+      "price": "€3,74",
       "period": "/mois",
       "description": "Facturation mensuelle, annulez quand vous voulez",
       "discount": "Économisez 35 %",
-      "originalPrice": "€6,99"
+      "originalPrice": "€4,99"
     },
     "premium": {
       "title": "VitalsPath Premium",
@@ -554,19 +554,19 @@
     "annual": {
       "title": "Annuel",
       "badge": "MEILLEUR PRIX",
-      "price": "39,99 €",
+      "price": "€29,99",
       "period": "/an",
       "description": "Facturation annuelle, économisez 33 %",
       "discount": "Économisez 35 %",
-      "originalPrice": "€54,99"
+      "originalPrice": "€39,99"
     },
     "lifetime": {
       "title": "À vie",
-      "price": "149,99 €",
+      "price": "€112,49",
       "period": "paiement unique",
       "description": "Paiement unique, accès à vie",
       "discount": "Économisez 15 %",
-      "originalPrice": "€199,99"
+      "originalPrice": "€149,99"
     },
     "features": {
       "unlimited_profiles": "Profils Illimités",
@@ -612,7 +612,11 @@
       "insurance_limit": "1 Assurance Santé",
       "symptoms_basic": "Symptômes de Base",
       "symptoms_complex": "Symptômes Complexes (Poitrine, Abdominal, Anxiété)",
-      "inventory_basic": "Stock et Inventaire de Base"
+      "inventory_basic": "Stock et Inventaire de Base",
+      "health_status": "Analyse de l'état de santé",
+      "health_status_desc": "Vue holistique et recommandations personnalisées basées on vos données.",
+      "gamification": "Gamification et Motivation",
+      "gamification_desc": "Objectifs, réalisations et récompenses pour prendre soin de votre santé de manière ludique."
     },
     "cta": "Prochainement",
     "cta_alt": "Inscrivez-moi"
